k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: insurance-tracker-api:latest
          imagePullPolicy: IfNotPresent
          command:
            [
              "dramatiq",
              "app.queue.actors",
              "--processes",
              "1",
              "--threads",
              "2",
            ]
